--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Prem Kumar",
+  "author": "Sandip Kumar",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
